data/derived/comb/progs/unify/prog7356.ml.out
Characters 248-252:
  let (_, res) = List.fold_left f base args in
                                  ^^^^
Error: This expression has type int * int list
       but an expression was expected of type int list * int list
       Type int is not compatible with type int list 
